tests/golden/fixtures/unit-multi-input-undefined-symbol/expected.err
Error: undefined symbol 'missing'
   ╭─[ tests/golden/fixtures/unit-multi-input-undefined-symbol/input.10-main.k65:2:9 ]
   │
 2 │     jsr missing
   │         ───┬───  
   │            ╰───── symbol 'missing' referenced here
   │ 
   │ Help: no `func`, `var`, `const`, or top-level label named 'missing' is exported by any of the linked objects; check the spelling, declare/define the symbol in one of the source files, or add the missing source to the project so the linker sees it
   │ 
   │ Note: Symbol resolution happens at link time across every `.o65` in the project. Missing-symbol errors usually mean a source file was not compiled into the link group, or an `inline` import / cross-unit reference was renamed.
───╯
